--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=1337
-DATABASE_URL=mongodb://localhost:127.0.0.1/travel-log
+DATABASE_URL=mongodb+srv://gachez:F@ll1ngskies@clustermapit-j4hue.gcp.mongodb.net/test?retryWrites=true&w=majority
 CORS_ORIGIN=http://localhost:3000
+
